src/test/ui/union/union-empty.stderr
error: unions cannot have zero fields
  --> $DIR/union-empty.rs:1:1
   |
LL | union U {} //~ ERROR unions cannot have zero fields
   | ^^^^^^^^^^

error: aborting due to previous error

